# valence

./: .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  etcd.service  install_rsc.sh  install_valence.sh  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api-ref/source/: conf.py  index.rst  parameters.yaml  valence-api-v1-devices.inc  valence-api-v1-flavor.inc  valence-api-v1-flavors.inc  valence-api-v1-nodes.inc  valence-api-v1-pods.inc  valence-api-v1-pooled.inc  valence-api-v1-pooled_storage.inc  valence-api-v1-racks.inc  valence-api-v1-system.inc  valence-api-version.inc
doc/: README.md
doc/api/: RSC_API-v0.4.1.docx  VALENCE_API-v0.4.1.docx
doc/api-mockup/: index.json
doc/source/: add_flavor_criteria.rst  add_new_api.rst  add_new_functional_testing.rst  conf.py  configuration.rst  deploy.rst  features.rst  index.rst  installation.rst  releasenotes.rst  usage.rst
etc/: README-valence.conf.txt  valence.conf.sample
etc/os-config-generator/: valence.conf
etc/services/: etcd.service
etc/services-startup-conf/: etcd.conf  valence.conf  valence.service
etc/valence/: valence.conf.sample
openstack-components-plugins/ironic/: rsd.py  rsd_tool.py
openstack-plugins/: README.rst
openstack-plugins/horizon-plugin/: README.md
openstack-plugins/ironic-plugin/: README.rst
releasenotes/notes/: 1-bp-add-vendor-extensible-framework-3f23b687f1f1af1a.yaml  2-bp-add-device-orchestration-164490daa26902a0.yaml  3-bp-add-expether-driver-87493161172fe744.yaml  bp-add-device-orchestration-ea5383f777c45a93.yaml  bp-add-expether-driver-038c7f8c7a5b4579.yaml  bp-add-vendor-extensible-framework-4e9fb1e10917eb50.yaml
releasenotes/source/: conf.py  index.rst  valence-0.9.rst
rsc/api/: app.py  config.py  hooks.py
rsc/cmd/: api.py  controller.py
rsc/common/: exceptions.py  osinterface.py  rpc.py  rpc_service.py
rsc/controller/: api.py  config.py
rsc/flavor/: flavor.py
rsc/objects/: base.py
rsc/tests/: __init__.py  config.py  test_functional.py
rsc/ui/: package.json
simulator/: README.md
simulator/pod_manager/: README.md  common.py  requirements.txt  route.py  run.py
ui/: README.md  karma.conf.js  package.json  webpack.config.js
ui/spec/: RenderSpec.js
ui/src/: customized.css  index.html  rsd.css
valence/: __init__.py  config.py  flavors.py  run.py  version.py
valence/api/: app.py  base.py  config.py  hooks.py  link.py  root.py  route.py  types.py
valence/cmd/: api.py  conductor.py  controller.py  db_manager.py
valence/common/: async.py  base.py  clients.py  config.py  constance.py  constants.py  context.py  exception.py  http_adapter.py  i18n.py  osinterface.py  rpc.py  rpc_service.py  singleton.py  types.py  utils.py
valence/conductor/: conductor.py  flavors.py  nodes.py  podmanagers.py  rpcapi.py  tasks.py
valence/conf/: __init__.py  api.py  (+7 more)
(+431 files in other folders)
