[metadata]
name = rsc
summary = Openstack RSC Project
description-file =
    README.rst
author = Intel Corporation
author-email = openstack-dev@lists.openstack.org
home-page = https://launchpad.net/plasma
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    rsc

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = rsc/locale
domain = rsc

[update_catalog]
domain = rsc
output_dir = rsc/locale
input_file = rsc/locale/rsc.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = rsc/locale/rsc.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
console_scripts =
    rsc-api = rsc.cmd.api:main
    rsc-controller = rsc.cmd.controller:main

oslo.config.opts =
    rsc = rsc.api.config:list_opts
